<resources>
    <string name="app_name">Exponent VPN</string>
    <string name="action_settings">Settings</string>
    <string name="connecting">Connecting</string>
    <string name="disconnected">Disconnected</string>
    <string name="disconnected_all_caps">DISCONNECTED</string>
    <string name="connected">Connected</string>
    <string name="connected_all_caps">CONNECTED</string>
    <string name="ready">READY</string>
    <string name="choose_account">CHOOSE ACCOUNT</string>
    <string name="enter_pin_for">ENTER PIN FOR</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="total_tx">TOTAL TX:</string>
    <string name="total_rx">TOTAL RX:</string>
    <string name="speed_uplink">SPEED UPLINK:</string>
    <string name="speed_downlink">SPEED DOWNLINK:</string>
    <string name="online_time">ONLINE TIME:</string>
    <string name="pin_content_desc">PIN input field</string>
    <string name="pin_label_text">PIN</string>
    <string name="server">SERVER</string>
    <string name="client">CLIENT</string>
    <string name="username">USERNAME</string>
    <string name="end_point">END-POINT</string>
    <string name="ip_address">IP ADDRESS</string>
    <string name="route">ROUTE</string>
    <string name="dns">DNS</string>
    <string name="app_list_using_vpn_title">THESE APPS ARE USING VPN</string>
    <string name="app_list_not_using_vpn_title">THESE APPS DO NOT USE VPN</string>
    <string name="empty_list">This list is empty</string>
</resources>
