<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".8"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_alignParentLeft="true"/>

                <TextView
                    android:id="@+id/user_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end_point"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_alignParentLeft="true"/>

                <TextView
                    android:id="@+id/server_end_point"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="69.60.121.29"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/client"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ip_address"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_alignParentLeft="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="172.16.8.3"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/route"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_alignParentLeft="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.0.0.0/0"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dns"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_alignParentLeft="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="8.8.8.8"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".2"
        android:gravity="bottom|center_horizontal"
        android:padding="20dp">

        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_out"
            android:background="@drawable/rectangular_button_rounded_corner"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />
    </LinearLayout>

</LinearLayout>