<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <LinearLayout
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:padding="10dp"
            android:background="@drawable/circular_background_connected"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@mipmap/ic_connected"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connected_all_caps"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_tx"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_alignParentLeft="true"/>

            <TextView
                android:id="@+id/tx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0 bytes"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_rx"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_alignParentLeft="true"/>

            <TextView
                android:id="@+id/rx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0 bytes"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speed_uplink"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_alignParentLeft="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0 kb/s"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speed_downlink"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_alignParentLeft="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0 kb/s"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/online_time"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_alignParentLeft="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3 min 6 sec"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:gravity="bottom|center_horizontal"
        android:padding="20dp">

        <Button
            android:id="@+id/ready_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_out"
            android:background="@drawable/rectangular_button_rounded_corner"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />
    </LinearLayout>

</LinearLayout>