<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/enter_pin_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:text="@string/enter_pin_for"
        android:textSize="18sp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/account_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginBottom="20dp"
        android:text="" />

    <LinearLayout
        android:id="@+id/pin_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <EditText android:id="@+id/pin_first_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/pin_content_desc"
            style="@style/pin_edittext_style" />

        <EditText android:id="@+id/pin_second_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/pin_content_desc"
            style="@style/pin_edittext_style" />

        <EditText android:id="@+id/pin_third_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/pin_content_desc"
            style="@style/pin_edittext_style" />

        <EditText android:id="@+id/pin_forth_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/pin_content_desc"
            style="@style/pin_edittext_style" />
    </LinearLayout>

    <EditText android:id="@+id/pin_hidden_edittext"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:background="@null"
        android:cursorVisible="false"
        android:inputType="numberPassword"
        android:maxLength="5"
        android:textColor="#00000000"
        android:contentDescription="@string/pin_content_desc"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:background="@drawable/rectangular_button_rounded_corner"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>