<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/not_using_vpn_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_list_not_using_vpn_title"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/not_using_vpn_list_is_empty_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty_list"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/not_using_vpn_title_tv"/>

        <ListView
            android:id="@+id/not_using_vpn_app_list"
            android:layout_width="wrap_content"
            android:padding="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:scrollbars="none"
            android:layout_below="@+id/not_using_vpn_title_tv"
            android:visibility="gone"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/using_vpn_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_list_using_vpn_title"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/using_vpn_list_is_empty_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty_list"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/using_vpn_title_tv"
            android:visibility="gone"/>

        <ListView
            android:id="@+id/installed_app_list"
            android:layout_width="wrap_content"
            android:padding="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:scrollbars="none"
            android:layout_below="@+id/using_vpn_title_tv"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/progressBar"
                android:minHeight="60dip"
                android:maxHeight="60dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@android:style/Widget.ProgressBar.Large"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>